# tinape

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bootstrap.py  gpt_collect.py
.cmake_utilities/modules/: all.cmake  clang_format.cmake  clang_tidy.cmake  default.cmake  python_venv.cmake  structured_directories.cmake
.cmake_utilities/modules/structured_directories/: common.cmake  executable.cmake  export.h.in  header.cmake  shared.cmake  static.cmake  test.cmake
.cmake_utilities/scripts/: bootstrap.py  file_lock.py  run.py  run_clang_format.cmake  run_clang_tidy.cmake
.github/workflows/: build-and-test.yml
cmake/: add_executable_directory.cmake  add_executables_directory.cmake  add_libraries_directory.cmake  add_library_directory.cmake  cxx20.cmake
core/base/: CMakeLists.txt  header.cmake  target.cmake
core/base/include/: base.h  geometry.h
core/base/include/base/: fixed.h  index.h  vec2.h  vec3.h  vec4.h
core/base/include/container/: query_iterable.h
core/base/include/geometry/: aabb.h  circle.h  dynamic_circle.h  line_segment.h
core/base/include/type/: float.h  index.h  index_pair.h  traits.h  vec2.h  vec3.h  vec4.h
core/collision/: CMakeLists.txt
core/collision/include/: collision.h
core/collision/include/accelerator/: adjacency_list.h  constraint.h  hash_grid.h
core/collision/include/collision/: adjecency_list.h  definitions.h  hash_grid.h  query_iterable.h
core/geometry/include/: geometry.hpp
core/geometry/include/geometry/: aabb.hpp  circle.hpp  dynamic_circle.hpp  index.hpp  line_segment.hpp  vec2.hpp  vec3.hpp  vec4.hpp
core/index/: CMakeLists.txt
core/index/include/index/: index.h
core/numeric/: static.cmake
core/numeric/include/: numeric.hpp
core/numeric/include/numeric/: base.hpp  bits.hpp  fixed.hpp  fixed.inl  fixed_arithmetic.inl  fixed_compare.inl  fixed_convert.inl  fixed_literal.inl  fixed_round.inl  ieee754.hpp  int.hpp  repr.hpp  sign.hpp
core/numeric/include/numeric/fixed/: comperator.hpp  conversion.hpp  literal.hpp  numbers.hpp  operator.hpp  util.hpp
core/numeric/include/numeric/int/: comperator.hpp  conversion.hpp  literal.hpp  operator.hpp
core/platform/: CMakeLists.txt  target.cmake
core/platform/include/: platform.h
core/platform/include/platform/: log.hpp  network.h  runtime.h  utility.h  window.h
core/util/: .gitignore  gen_macro.py  header.cmake
core/util/include/: assert.hpp  macro.hpp
core/world/: header.cmake
core/world/include/: world.hpp
example/: context.h  game.cpp  game.h  main.cpp  random.h  scene.cpp  scene.h
include/: circle.h  index.h  limit.h  math.h  random.h  shape.h
include/accelerator/: adjacency_list.h  constraint.h  hash_grid.h  island.h  query_iterable.h
include/geometry/: aabb.h  math.h
include/index/: index.h  query_iterable.h
src/: main.cpp
test/base/: fixed.cpp  fixed_constants.cpp  geometry.cpp  test_fixed.cpp  test_geometry.cpp  test_vec2.cpp  tests.cmake  vec2.cpp
test/base/type/: float_constants.cpp  float_representation.cpp
test/collision/: quantify.cpp  tests.cmake
test/fixed/: test_fixed.cpp  test_fixed_arithmetic.cpp  test_fixed_cast.cpp  test_fixed_compare.cpp  test_fixed_convert.cpp  test_fixed_literal.cpp  test_fixed_mask.cpp  test_fixed_mul.cpp  test_fixed_repr.cpp  test_fixed_round.cpp  test_fixed_sizeof.cpp  tests.cmake
test/vec/: test_geometry.cpp  test_vec.cpp  tests.cmake
test/world/: test_world.cpp  tests.cmake
tool/sandbox/: executable.cmake
tool/sandbox/src/: game.h  main.cpp  scene.h  window.h
